text overflow problem fixed, 2 filtering options added, and filter icon changed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -186,7 +186,7 @@ p.overview {
     grid-template-rows: 1fr 2fr;
 }
 .back .buttons .icon-fav{
-    padding-top: 0.4rem;
+    padding-top: 0rem;
     grid-area: 2 / 1 / 3 / 3;
 }
 .back .buttons a{
@@ -220,4 +220,3 @@ p.overview {
     background-color: var(--bg-color-2);
     color: black;
   }
-  
